# imageprocessing

./: .gitignore
common/: image.jl
edges/: convolve.m
histograms/: dperry_cs6640_project1_report.html  dperry_cs6640_project1_report.odt  emgmm.m  histoeq.m  histoeq2.m  histogram.m  index.html  kmeans.m  main.m  normalpdf.m  uniformrnd.m
histograms/cpp/: CMakeLists.txt  emgmm.h  emgmm_md.cc  emgmm_md.h
histograms/images/: chang.tif  crowd.tif  ctscan.tif  portal.tif  university.tif
hough/: dperry_cs6640_assign4_hough.html  drawlines.m  drawpoints.m  findmaxima.m  hough.m  hough_decrement.m  hough_orientation.m  index.html  main.m
hough/edges/: convolve.m  convolve1D.m  edgeMap.m  makeGauss1D.m  orientationMap.m  rescaleDiffImage.m
implicit_shape_model/: agglomerative_cluster.m  cluster_center.m  cluster_center_frechet.m  cluster_centers.m  codebook_matches.m  create_codebook.m  dperry_cs6640_final.html  drawpoints.m  extract_patch.m  extract_patches.m  extract_patches_neighbors.m  hough_coverage.m  index.html  main.m  ngc.m  preprocess_cars.m  show_clusters.m  show_test.m  similarity.m  slow_agglomerative_cluster.m
maximumprinciple/: maximumprinciple_john.tex
nonlinear_deblurring/code/: CMakeLists.txt  TotalVariationFilter.h  tv.cc
nonlinear_deblurring/writeup/: nonlinear_deblurring.tex
nonlinear_smoothing/code/: CMakeLists.txt  ChambolleDualFilter.h  ChambolleDualFilter.hxx  ChambolleFilter.h  ChambolleFilter.hxx  ChambollePrimalFilter.h  ChambollePrimalFilter.hxx  DeepCopy.h  DivergenceFilter.h  DivergenceFilter.hxx  DualFilter.h  DualFilter.hxx  GaussSeidelFilter.h  GaussSeidelFilter.hxx  GradientFilter.h  GradientFilter.hxx  PrimalDualFilter.h  PrimalDualFilter.hxx  PrimalFilter.h  PrimalFilter.hxx  README.txt  ShrinkBregmanFilter.h  ShrinkBregmanFilter.hxx  SplitBregmanFilter.h  SplitBregmanFilter.hxx  TotalVariationChambolleDualFilter.h  TotalVariationChambolleDualFilter.hxx  TotalVariationChambolleFilter.h  TotalVariationChambolleFilter.hxx  TotalVariationChambollePrimalFilter.h  TotalVariationChambollePrimalFilter.hxx  TotalVariationDualFilter.h  TotalVariationDualFilter.hxx  TotalVariationFilter.h  TotalVariationFilter.hxx  TotalVariationImageFilter.h  TotalVariationImageFilter.hxx  TotalVariationPrimalDualFilter.h  TotalVariationPrimalDualFilter.hxx  TotalVariationPrimalFilter.h  (+7 more)
nonlinear_smoothing/writeup/: nonlinear_smoothing.bib  nonlinear_smoothing_dperry.tex  timing_camera.csv  timing_circle.csv  timing_sailboat.csv  timing_slice.csv
nonlocal_denoising/code/: NonlocalDenoising.jl  nlmeans.jl
normalized_cuts/code/: images.txt  (+4 more)
spatial_filtering/: convolve.m  convolve1D.m  convolve2D.m  correlate.m  dperry_cs6640_assign2_spatial_filtering.html  index.html  main.m  makeBox.m  makeBox1D.m  makeBox2D.m  makeDiff1D.m  makeGauss1D.m  makeStencil.m  orientationMap.m
transformations/: dperry_cs6640_assign3_transformations.html
(+35 files in other folders)
